sidebar: fix alignment of items when collapsed

--- a/src/styles/sidebar/index.css
+++ b/src/styles/sidebar/index.css
@@ -16,6 +16,7 @@
   display: block;
   min-height: 100vh;
   flex: 0 0 var(--sidebar-width);
+  width: var(--sidebar-width);
 }
 
 .section {
@@ -33,6 +34,7 @@
 
 .collapsed {
   flex: 0 0 var(--sidebar-collapsed-width);
+  width: var(--sidebar-collapsed-width);
 
   & header {
     justify-content: center;
@@ -64,10 +66,12 @@
 
   .sidebar {
     width: var(--sidebar-width-desk);
+    flex: 0 0 var(--sidebar-width-desk);
   }
 
   .collapsed {
     width: var(--sidebar-collapsed-width-desk);
+    flex: 0 0 var(--sidebar-collapsed-width-desk);
   }
 }
 
@@ -75,9 +79,11 @@
 
   .sidebar {
     width: var(--sidebar-width-tv);
+    flex: 0 0 var(--sidebar-width-tv);
   }
 
   .collapsed {
     width: var(--sidebar-collapsed-width-tv);
+    flex: 0 0 var(--sidebar-collapsed-width-tv);
   }
 }
